change main file location and adjust swagger docs.
